The scrollbar works, although there's a weird lagging bug which I don't understand.

--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -1,5 +1,5 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-}
+} */
